# Projeto-Carteira-Digital

./: README.md  docker-compose.yaml  migration.py
api/persistence/repositories/: carteira_repository.py  deposito_saque_repository.py  moeda_repository.py  saldo_repository.py  transferencia_repository.py
api/services/: carteira_service.py  conversao_service.py  moeda_service.py  saldo_service.py
app/: Dockerfile  pyproject.toml
app/api/models/: carteira_models.py
app/api/persistence/repositories/: conversao_repository.py
app/api/routers/: carteira_router.py
app/api/services/: deposito_saque_service.py  transferencia_service.py
db/: Dockerfile  init.sql
sql/: DDL_Carteira_Digital.sql
